<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">Author</string>
    <string name="above_circle">Located on the circle</string>
    <string name="action_settings">Setting</string>
    <string name="add_equation">Add equation</string>
    <string name="add_function">Add function</string>
    <string name="add_point">Add new point</string>
    <string name="advanced">Advanced</string>
    <string name="all_calculator">Calculator</string>
    <string name="all_equation">Equation</string>
    <string name="all_unit_converter">Unit Converter</string>
    <string name="analyze">Analyze</string>
    <string name="and_desc">Operations and</string>
    <string name="app_information">Introduce</string>
    <string name="auto_process">Automatic data processing</string>
    <string name="b_t_ph_ng_tr_nh">Disequations</string>
    <string name="basic">Basic</string>
    <string name="bell_number">Number Bell</string>
    <string name="bi_t_th_c_delta">Delta discriminant</string>
    <string name="binomial_newton">Newton binomial expansion</string>
    <string name="bpt_bac_hai">Any quadratic</string>
    <string name="bpt_bac_nhat">No superlative equation</string>
    <string name="calc">Calc</string>
    <string name="calculator">Calculator</string>
    <string name="cannot_factor">Can not prime factor</string>
    <string name="cannotwrite">Can not write</string>
    <string name="catalan_number">Number Catalan</string>
    <string name="choose_color">Choose colors</string>
    <string name="choose_mode">Select the mode 2D or 3D graphs</string>
    <string name="chuy_n_h_m_l_ng_gi_c_sang_h_m_m">Transfer to exponential trigonometric functions</string>
    <string name="chuy_n_s_th_c_v_ph_n_s">Transfer real numbers to fractions</string>
    <string name="chuyen_doi_co_so">Radix conversion</string>
    <string name="cimp_desc">Converse implication</string>
    <string name="circle">Circle</string>
    <string name="circle_interaction">Two circles intersect</string>
    <string name="circle_tangent">Two circles intersect</string>
    <string name="clear_desc">Clear</string>
    <string name="clear_history">Clear history</string>
    <string name="close">Close</string>
    <string name="cnimp_desc">Converse nonimplication</string>
    <string name="coefficent">The coefficient of variation in the polynomial</string>
    <string name="collinear">Straight</string>
    <string name="column">column</string>
    <string name="complex_calculator">Computers complex numbers</string>
    <string name="continued_fraction">Continued fractions</string>
    <string name="copied">Copied</string>
    <string name="copy">"Copy '%s'"</string>
    <string name="copy_as_latex">Copy as LaTeX</string>
    <string name="copy_as_mathml">Copy as MathML</string>
    <string name="copy_as_text">Copy as text</string>
    <string name="corner">Angel</string>
    <string name="cosDesc">cosine</string>
    <string name="create">Create</string>
    <string name="d_n_ncalc">Project NCalc +</string>
    <string name="d_n_ph_n_m_m_ncalc">Software project NCalc +</string>
    <string name="define_var">Define Variable</string>
    <string name="delDesc">Delete</string>
    <string name="delete_desc">Erase</string>
    <string name="delete_x">Erase</string>
    <string name="der_level_desc">Select derivative level here</string>
    <string name="derivative">Derivative</string>
    <string name="derivative_level">Derivative level</string>
    <string name="desc_bin">Binary</string>
    <string name="desc_clr">Clear</string>
    <string name="desc_const_e">"Euler's number"</string>
    <string name="desc_const_pi">Pi</string>
    <string name="desc_dec">Decimal</string>
    <string name="desc_dec_point">Point</string>
    <string name="desc_del">Delete</string>
    <string name="desc_eq">Equals</string>
    <string name="desc_fun_arccos">Arc Cosine</string>
    <string name="desc_fun_arccot">Arc Cosine</string>
    <string name="desc_fun_arccsc">Arc Cotangent</string>
    <string name="desc_fun_arcsec">Arc Secent</string>
    <string name="desc_fun_arcsin">Arc Sine</string>
    <string name="desc_fun_arctan">Arc Tangent</string>
    <string name="desc_fun_cos">Cosine</string>
    <string name="desc_fun_cot">Cotangent</string>
    <string name="desc_fun_csc">Cosecent</string>
    <string name="desc_fun_det">Determinant</string>
    <string name="desc_fun_eigen_value">Eigenvalues</string>
    <string name="desc_fun_ln">Natural logarithm</string>
    <string name="desc_fun_log">logarithm</string>
    <string name="desc_fun_percentage">Percent</string>
    <string name="desc_fun_sec">Secent</string>
    <string name="desc_fun_sin">sine</string>
    <string name="desc_fun_tan">tangent</string>
    <string name="desc_hex">Hexadecimal</string>
    <string name="desc_lparen">left parenthesis</string>
    <string name="desc_oct">Octal</string>
    <string name="desc_op_add">plus</string>
    <string name="desc_op_cbrt">cube root</string>
    <string name="desc_op_div">divide</string>
    <string name="desc_op_fact">factorial</string>
    <string name="desc_op_mul">times</string>
    <string name="desc_op_pow">power</string>
    <string name="desc_op_sqrt">square root</string>
    <string name="desc_op_sub">minus</string>
    <string name="desc_parentheses">Parentheses</string>
    <string name="desc_rparen">right parenthesis</string>
    <string name="dialog_cancel">Come back</string>
    <string name="dialog_picker_title">Select</string>
    <string name="dialog_set_number">OK</string>
    <string name="discriminant">Delta discriminant of the polynomial</string>
    <string name="divDesc">Divide</string>
    <string name="do_thi">Graph</string>
    <string name="dot_desc">Dot</string>
    <string name="eDesc">Euler number</string>
    <string name="eliminate">Simple variables</string>
    <string name="ellipse">Ellipse</string>
    <string name="enter_from">From</string>
    <string name="enter_function">Enter function</string>
    <string name="enter_limit">Enter limit</string>
    <string name="enter_params">Enter the variable of the system of equations</string>
    <string name="enter_to">To</string>
    <string name="enter_value">Enter value</string>
    <string name="eq_desc">Equal</string>
    <string name="equalDesc">equals</string>
    <string name="eqv_desc">Logical biconditional</string>
    <string name="expand">Expand</string>
    <string name="factor_equation">Analysis of factorization polynomial</string>
    <string name="factor_prime">Analysis prime factor</string>
    <string name="gi_i_thi_u_v_calc">About Ncalc</string>
    <string name="gop_y">Feedback</string>
    <string name="graph">Graph</string>
    <string name="help">Help</string>
    <string name="how_to_use">Using</string>
    <string name="integrate">Integrate</string>
    <string name="limit">Find Limit</string>
    <string name="linear_system">Equations</string>
    <string name="logic_calculator">Computer base</string>
    <string name="matrix">Matrix</string>
    <string name="more">More …</string>
    <string name="nav_descartes">2D geometry</string>
    <string name="out_latex">Save as LaTeX</string>
    <string name="out_mathml">Save as MathML</string>
    <string name="out_text">Save as Text</string>
    <string name="primitive">Primitive</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="redo">Redo</string>
    <string name="science_calculator">Computer science</string>
    <string name="settings">Setting</string>
    <string name="simplify">Simplify</string>
    <string name="simplify_equation">Simplify expression</string>
    <string name="solve">Solve</string>
    <string name="solve_equation">Solve the equation</string>
    <string name="table">Statistical</string>
    <string name="thpt_nguy_n_b_nh_khi_m">Nguyen Binh Khiem High School</string>
    <string name="title_activity_graph">Graph</string>
    <string name="undo">Prev</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="abs">abs</string>
    <string name="acosh">acosh</string>
    <string name="and">&amp;&amp;</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arccos">acos</string>
    <string name="arcsin">asin</string>
    <string name="arctan">atan</string>
    <string name="asinh">asinh</string>
    <string name="atanh">atanh</string>
    <string name="bin">Bin</string>
    <string name="binomial">C</string>
    <string name="ceil">ceil</string>
    <string name="clear">CLR</string>
    <string name="cosh">cosh</string>
    <string name="dec">Dec</string>
    <string name="delete">DEL</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="e">e</string>
    <string name="eq">==</string>
    <string name="equal">=</string>
    <string name="exp">exp</string>
    <string name="floor">floor</string>
    <string name="gcd">GCD</string>
    <string name="geq">≥</string>
    <string name="gt">></string>
    <string name="hex">Hex</string>
    <string name="i">i</string>
    <string name="lcm">LCM</string>
    <string name="leftParen">(</string>
    <string name="leq">≤</string>
    <string name="lg">log</string>
    <string name="ln">ln</string>
    <string name="logo">logo</string>
    <string name="lt">&lt;</string>
    <string name="max">max</string>
    <string name="mfalse">false</string>
    <string name="min">min</string>
    <string name="minus">-</string>
    <string name="mod">mod</string>
    <string name="mtrue">true</string>
    <string name="mul">*</string>
    <string name="neq">≠</string>
    <string name="not">!</string>
    <string name="oct">Oct</string>
    <string name="or">||</string>
    <string name="percentage">%</string>
    <string name="permutations">P</string>
    <string name="plus">+</string>
    <string name="rightParen">)</string>
    <string name="sgn">sign</string>
    <string name="sinh">sinh</string>
    <string name="tanh">tanh</string>
</resources>