<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:orientation="1" app:layout_width="-1" app:layout_height="-2">
    <android.support.v7.widget.CardView app:layout_width="-1" app:layout_height="-1" app:cardCornerRadius="0dp" app:cardElevation="4dp" app:cardUseCompatPadding="false">
        <LinearLayout app:orientation="0" app:layout_width="-1" app:layout_height="-2">
            <ImageView app:id="@id/imageView" app:layout_width="120dp" app:layout_height="120dp" app:src="@mipmap/splash" app:scaleType="3" app:contentDescription="@string/logo" />
            <LinearLayout app:layout_gravity="11" app:orientation="1" app:layout_width="-1" app:layout_height="-2">
                <TextView app:layout_width="-1" app:layout_height="-2" app:text="@string/thpt_nguy_n_b_nh_khi_m" />
                <TextView app:textStyle="1" app:id="@id/textView30" app:layout_width="-1" app:layout_height="-2" app:text="@string/d_n_ncalc" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
